# tight-binding-green-function

./: .gitignore  Cargo.toml  README.md
add-one/: Cargo.toml
adder/src/: main.rs
band-calculation/: Cargo.toml
band-calculation/src/: atom.rs  main.rs  tight_binding.rs
guessing_game/src/: main.rs
variables/src/: main.rs
