[package]
name = "band-calculation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3.1"
nalgebra = "0.29.0"
lapack = "0.19"
blas = "0.20"
openblas-src = "0.9"

[dependencies.nalgebra-lapack]
version = "0.20.0"
default-features = false
features = [ "netlib" ]
